--- a/index.html
+++ b/index.html
@@ -76,23 +76,15 @@ open-source enthusiast, GNU/Linux tinkerer, gardener, and half-bad carpenter<br 
 </p>
 </section>
 </td>
-<td align="right" valign="top">
-<img src="images/bio.jpg" width=150>
-</td>
 </tr>
 <tr>
 <td colspan=2>
 <section class="ps-info">    
 <hr />
-<p><a href="https://goo.gl/photos/sxRPPxWeD7u8mD6X8">House Reno Pictures</a>      •      <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0x7E6353A4073B3487">My PGP key</a>    •    <a href="https://github.com/matthewlboyd">Personal GitHub</a></p>
+<p><a href="https://goo.gl/photos/sxRPPxWeD7u8mD6X8">House Reno Pictures</a>      •   <a href="https://github.com/matthewlboyd">Personal GitHub</a></p>
 <hr />
 <p>Howdy Yall! I'm an open-source enthusiast, GNU/Linux tinkerer, gardener (want a zucchini?), and half-bad carpenter. For employment, I've primarily worked as a Linux system administrator and database admin (Postgres and Mongo mainly), though I've previously been a machinist, bike mechanic, and kayak instructor.</p>
 <p>In my non-work time, I can usually be found renovating my 100+ year old house, gardening with my kiddo, or going on long bike rides (ideally on a dirt road or trail).</p>
-<hr />
-<div class="figure">
-<img src="images/main.jpg" alt="Dirt touring eastern Oregon" /><p class="caption"><em>Dirt touring eastern Oregon</em></p>
-</div>
-<hr />
 </section>
 </td>
 <td width=20>
